--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 		<meta charset="UTF-8">
 		<title>Ocelotove</title>
 		<link rel="stylesheet" href="style.css">
+		<script src="main.js"></script>
 	</head>
 	<body>
 		<header id="oceloti-hlava">
 			<h1>Ocelot</h1>
-	
 		</header>
 	</body>
 </html>
- <h2>2 nejroztomilejší zvíře světa<h2>
+
+ 
